# datamind-ai

./: .gitignore  README.md  TODO.md  pyproject.toml
core/: .env.example  pyproject.toml
core/app/: config.py  main.py
core/app/routes/: data_analysis.py  file_upload.py
core/app/services/: ai_service.py  file_upload_service.py
core/tests/: test_aggregations.py  test_ai_service.py  test_anomaly_api.py  test_api.py  test_llm_generation.py  verify_background.py
docs/: SPECIFICATIONS.md
test-doc/: generate_test_data.py  iot_sensor_data.csv
ui/: package-lock.json  package.json
ui/src/: App.tsx
ui/src/axios/: axiosConfig.ts
ui/src/axios/api/: analysisApiService.ts  telemetryApiService.ts
ui/src/axios/endpoints/: endpoints.ts
ui/src/components/button/: Button.models.ts  Button.tsx
ui/src/components/cards/insight-card/: InsightCard.constants.tsx  InsightCard.models.ts  InsightCard.tsx
ui/src/components/cards/schema-card/: SchemaCard.models.ts  SchemaCard.tsx
ui/src/components/cards/stats-card/: StatsCard.models.ts  StatsCard.tsx
ui/src/components/data-table/: DataTable.models.ts  DataTable.tsx
ui/src/components/layout/: MainLayout.tsx
ui/src/components/layout/header/: Header.tsx
ui/src/components/layout/sidebar/: Sidebar.constants.tsx  Sidebar.tsx
ui/src/pages/: Dashboard.tsx  NotFound.tsx
ui/src/pages/Dashboard/constants/: analysis.constants.ts  dashboard.constants.ts  (+2 more)
ui/src/utils/: formatters.ts
ui/src/zustand/: useUIStore.ts
ui/src/zustand/features/: analysisStore.ts  fileStore.ts
ui/src/zustand/models/: fileStore.model.ts
(+10 files in other folders)
