[project]
name = "datamind-ai"
version = "0.1.0"
description = ""
authors = [
    { name = "SnehaMV", email = "sneha.mv@nuventure.in" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0,<0.129.0",
    "uvicorn>=0.40.0,<0.41.0",
    "python-multipart>=0.0.21,<0.0.22",
    "python-dotenv>=1.0.1,<2.0.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
