[project]
name = "datamind-ai"
version = "0.1.0"
description = ""
authors = [
    { name = "SnehaMV", email = "sneha.mv@nuventure.in" }
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.128.0,<0.129.0",
    "uvicorn>=0.40.0,<0.41.0",
    "python-multipart>=0.0.21,<0.0.22",
    "pymongo>=4.16.0,<5.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "openpyxl>=3.1.2,<4.0.0",
    "google-generativeai>=0.8.0,<0.9.0",
    "scikit-learn>=1.6.0,<2.0.0",
    "langgraph (>=1.0.7,<2.0.0)",
    "langchain-google-genai (>=4.2.0,<5.0.0)",
    "langchain (>=1.2.7,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
